--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
     </section>
   </template>
   <script src="/js/main.js" type="module"></script>
+  <script src="js/functions.js"></script>
 </body>
 
 </html>
