--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
   </template>
   <script src="/js/main.js" type="module"></script>
   <script src="js/functions.js"></script>
+  <!-- <script src="js/otherPhotoUsers.js"></script> -->
 </body>
 
 </html>
