--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
   </template>
   <!-- <script src="/js/functions.js"></script> -->
   <script src="/vendor/pristine/pristine.min.js"></script>
+  <script src="/vendor/nouislider/nouislider.js"></script>
   <script src="/js/main.js" type="module"></script>
 </body>
 
